<resources>
    <string name="app_name">HH_Clone_Test</string>
    <string name="menu_search_title">Поиск</string>
    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_responses_title">Отклики</string>
    <string name="menu_messages_title">Сообщения</string>
    <string name="menu_profile_title">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Вход в личный кабинет</string>
    <string name="enter_with_password">Войти с паролем</string>
    <string name="continue_text">Продолжить</string>
    <string name="job_search">Поиск работы</string>
    <string name="hunt_description">Размещение вакансий и доступ к базе резюме</string>
    <string name="hunt_header">Поиск сотрудников</string>
    <string name="hunt_btn_text">Я ищу сотрудников</string>
    <string name="example_gmail_com"><font size="14">Электронная почта или телефон</font></string>
    <string name="example_mail_ru">Отправили код на example@mail.ru</string>
    <string name="code_desctiption">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="asterisk"><font size="12">✱</font></string>
    <string name="confirm">Подтвердить</string>
    <string name="now_looking">Сейчас просматривает 1 человек</string>
    <string name="now_looking_sample">Сейчас просматривает %$s человек</string>
    <string name="designer_job_title">UI/UX Designer</string>
    <string name="favorites_title">Избранное</string>
    <string name="reply">Откликнуться</string>
    <string name="Minsk">Минск</string>
    <string name="example_company_name">Мобирикс</string>
    <string name="expirience">Опыт от 1 года до 3 лет</string>
    <string name="publishing_date">Опубликовано 20 февраля</string>
    <string name="search_hint"><font size="14">Должность, ключевые слова</font></string>
    <string name="error_email">Вы ввели неверный e-mail</string>
    <string name="vacancies_near">Вакансии рядом с вами</string>
    <string name="move_up">Поднять</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="more_vacancies">Еще 143 вакансии</string>
    <string name="total_vacancies">145 вакансий</string>
    <string name="sort_text">По соответствию</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="Not_exact_salary">Уровень дохода не указан</string>
    <string name="required_experience">Требуемый опыт: от 1 года до 3 лет</string>
    <string name="workload">Полная занятость, полный день</string>
    <string name="people_responded">147 человек уже откликнулись</string>
    <string name="now_looking_details">2 человека сейчас смотрят</string>
    <string name="address">Минск, улица Бирюзова, 4/5</string>
    <string name="your_tasks">Ваши задачи</string>
    <string name="ask_your_questions">Задайте вопрос работодателю</string>
    <string name="questions_description">Он получит его с откликом на вакансию</string>
</resources>