<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_rounded_corners_background">


    <ImageView
        android:id="@+id/favoritesIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_heart"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favoritesIcon">


        <TextView
            android:id="@+id/now_looking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/now_looking"
            android:layout_marginBottom="@dimen/dp_10"
            android:textColor="@color/green"
            android:textSize="@dimen/font_14" />

        <TextView
            android:id="@+id/job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/designer_job_title"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textSize="@dimen/font_16"
            />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/Minsk"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="@dimen/font_14"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/example_company_name"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="@dimen/font_14"
            android:layout_marginTop="@dimen/dp_4"
            app:drawableEndCompat="@drawable/ic_checkmark" />

        <TextView
            android:id="@+id/work_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/expirience"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="@dimen/font_14"
            android:layout_marginTop="@dimen/dp_10"
            app:drawableStartCompat="@drawable/ic_suitcase"
            android:drawablePadding="@dimen/dp_8"/>

        <TextView
            android:id="@+id/publishing_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey3"
            android:text="@string/publishing_date"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="@dimen/font_14"
            android:layout_marginTop="@dimen/dp_10"
            />
    </LinearLayout>

    <Button
        android:id="@+id/reply_btn"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@drawable/green_background_shape"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/reply"
        android:textAllCaps="false"
        android:layout_margin="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/info_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>